# cookiecutter-bigboi

./: README.md  cookiecutter.json
hooks/: _post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: tests.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/tests/: __init__.py  test_example.py
