[metadata]
name = {{cookiecutter.package_name}}
version = 0.1.0
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}
download_url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/releases
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/issues
    Source Code = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}

# Author information
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
maintainer = {{cookiecutter.author_name}}
maintainer_email = {{cookiecutter.author_email}}

# License Information
{%- if cookiecutter.license != "Other" -%}
license = {{cookiecutter.license}}
license_file = LICENSE
{% endif %}

# Search tags
# See https://pypi.org/classifiers/ for more info
classifiers =
    Development Status :: "2 - Pre-Alpha"
    Environment :: Console
    Intended Audience :: Developers
    {%- if cookiecutter.license == "MIT License" -%}
    License :: OSI Approved :: MIT License
    {%- elif cookiecutter.license == "BSD License" -%}
    License :: OSI Approved :: BSD License
    {%- elif cookiecutter.license == "ISC License (ISCL)" -%}
    License :: OSI Approved :: ISC License (ISCL)
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    License :: OSI Approved :: Apache Software License 
    {%- elif cookiecutter.license == "GNU General Public License v3" -%}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    {% endif %}
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cookiecutter
    # TODO add your own free-text keywords

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    # TODO add your required packages here (like requirements.txt)

[options.packages.find]
where = src

# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = True
statistics = False
doctests = True
ignore = D107,D202,D203,D401,E203,E402,E501,W503
max-line-length = 120
inline-quotes = double
exclude = .tox,build
strictness = long

[isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120
skip = .tox,build
known_first_party = tests
force_grid_wrap = 0
combine_as_imports = True

[mypy]
ignore_missing_imports = True
follow_imports = normal
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = False